--- a/src/components/LightboxLoader.astro
+++ b/src/components/LightboxLoader.astro
@@ -3,6 +3,6 @@
 ---
 
 <script>
-  import { initLightbox } from "./LightboxInit.js";
-  initLightbox();
+	import { initLightbox } from './LightboxInit.js';
+	initLightbox();
 </script>
