todo fix mobile menu, optimize images, add domain

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -6,9 +6,9 @@ const title = siteConfig.title;
 const base = import.meta.env.BASE_URL;
 const menuItems = [
 	{ name: 'Home', link: `${base}` },
-	{ name: 'Professional Work', link: `${base}/professionalwork` },
-	{ name: 'Personal Work', link: `${base}/personalwork` },
-	{ name: 'About', link: `${base}/about` },
+	{ name: 'Professional Work', link: `${base}professionalwork/` },
+	{ name: 'Personal Work', link: `${base}personalwork/` },
+	{ name: 'About', link: `${base}about/` },
 ];
 ---
 
