--- a/src/pages/professionalwork.astro
+++ b/src/pages/professionalwork.astro
@@ -34,6 +34,8 @@ const images = await Promise.all(
 
 		return {
 			...data,
+			url: `${import.meta.env.BASE_URL}${data.url}`,
+  			link: `${import.meta.env.BASE_URL}${data.link}`,
 			markdown: markdownHtml,
 		};
 	}),
