--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@400;500;700&display=swap');
 @import 'tailwindcss';
 @plugin "@tailwindcss/typography";
 
@@ -7,7 +8,7 @@
 
 @layer base {
 	:root {
-		--background: 0 0% 3%;
+		--background: 180 6.45% 12.16%;
 		--foreground: 240 10% 91%;
 		--card: 0 0% 100%;
 		--card-foreground: 240 10% 91%;
@@ -44,7 +45,7 @@
 	}
 
 	#logo {
-		font-family: 'Dancing Script', cursive;
+		font-family: 'Kaisei Decol', serif;
 	}
 }
 
